# kif-parser

./: .gitignore  Main.hs  README.markdown  Tests.hs  kif-parser.cabal
Text/: KIF.hs
Text/KIF/: Parser.hs
templates/: json.tmpl  junit.tmpl  markdown.tmpl
test-files/: test.txt  test2.txt
